Fix vertical alignment of text in tree browser rows
Add vertical-align: middle to .file-browser__cell so that text in all
columns is vertically centred within each row. Previously the default
baseline alignment caused visible misalignment on folder rows, where
the name column contains taller elements (chevron, icons).

Also add 2px vertical padding to cells to maintain comfortable row
height now that alignment no longer inflates row size implicitly.

--- a/frontend/src/stylesheets/components/_file-browser.scss
+++ b/frontend/src/stylesheets/components/_file-browser.scss
@@ -112,11 +112,11 @@
 }
 
 .file-browser__cell {
-  padding-left: $baseSpacing;
-  padding-right: $baseSpacing;
+  padding: 2px $baseSpacing;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  vertical-align: middle;
 }
 
 .file-browser__cell-flex-container {
